--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chat-clarity-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>InsightFlow</title>
+    <meta name="description" content="InsightFlow is a platform for conducting interviews and analyzing project data." />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
